welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:6: error: expected class or object definition
def isFacingTrail():Boolean = {if (!estFaceMur()){avance(); if (getCouleurSol() == Color.green) {recule();return true} else {recule();return false }} else {return false}
^SlugHunting:9: error: Unmatched closing brace '}' ignored here
}
^